XinyuWuu [MNT] remove ptf install from example notebook (#7165)
Split part of https://github.com/sktime/sktime/pull/6628, removes
`pytorch-forecasting` install from jupyter notebook, instead moves it to
the CI.

--- a/examples/01c_forecasting_hierarchical_global.ipynb
+++ b/examples/01c_forecasting_hierarchical_global.ipynb
@@ -34,13 +34,7 @@
     "%%capture\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "import sys\n",
-    "\n",
-    "py_exe = sys.executable\n",
-    "\n",
-    "!{py_exe} -m pip install pytorch-forecasting==1.0.0"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
