&alex-jg3 [DOC] anomaly and changepoint detection notebook from ODSC 2024 (#7284)
This PR adds the notebook of @alex-jg3 from ODSC 2024 on anomaly and
changepoint detection with `sktime` and `skchange` to the examples. This
is without the metrics section, as I expect that the metrics end state
will be different (i.e., following `BaseMetric` design).

Also makes the following changes:

* adds `skchange` to the dependencies installed for binder notebooks so
the code runs
* adds the data used to the data folder, without loaders - only a few
dozen kb, and without loaders for now
* changes some of the headers in other notebooks, so the auto-generated
thumbnail and link names are sensible

--- a/examples/03_transformers.ipynb
+++ b/examples/03_transformers.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformers in `sktime` <a class=\"anchor\" id=\"chapter3\"></a>"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -62,14 +69,6 @@
    "metadata": {},
    "source": [
     "---"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3. Transformers in `sktime` <a class=\"anchor\" id=\"chapter3\"></a>"
    ]
   },
   {
@@ -5721,7 +5720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
