--- a/examples/03b_forecasting_transformers_pipelines_tuning.ipynb
+++ b/examples/03b_forecasting_transformers_pipelines_tuning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4 Forecasting Pipelines, Tuning, and AutoML\n",
+    "# Forecasting Pipelines, Tuning, and AutoML\n",
     "This notebook is about pipelining and tuning (grid search) for time series forecasting with `sktime`"
    ]
   },
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 Using exogeneous data `X` in forecasting\n",
+    "## 1. Using exogeneous data `X` in forecasting\n",
     "The exogenous data `X` is a `pd.DataFrame` with the same index as `y`. It can be given optionally to a forecaster in the `fit` and `predict` methods. If `X` is given in `fit`, it also has to be given in `predict`, this means the future values of `X` have to be available at the time of prediction. "
    ]
   },
@@ -213,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Simple Forecasting Pipelines\n",
+    "## 2. Simple Forecasting Pipelines\n",
     "\n",
     "We hae seen: pipelines combine multiple estimators into one.\n",
     "\n",
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.3 Tuning"
+    "## 3. Tuning"
    ]
   },
   {
@@ -1587,7 +1587,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.4 Putting it all together: AutoML-like pipeline and tuning\n",
+    "## 4. Putting it all together: AutoML-like pipeline and tuning\n",
     "\n",
     "Taking all incredients from above examples, we can build a forecaster that comes close to what is usually called [AutoML](https://en.wikipedia.org/wiki/Automated_machine_learning).\n",
     "With AutoML we aim to automate as many steps of an ML model creation as possible. The main compositions from `sktime` that we can use for this are:\n",
@@ -1788,7 +1788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.5 Model backtesting\n",
+    "## 5. Model backtesting\n",
     "\n",
     "After fitting a model, we can evaluate the model error in the past similar to a cross-validation. For this we can use the `evaluate` function. This approach is often also called backtesting as we want to test the forecasters performance in the past."
    ]
@@ -2365,7 +2365,7 @@
    "source": [
     "---\n",
     "\n",
-    "### Credits: notebook 4 - pipelines\n",
+    "### Credits: notebook - pipelines\n",
     "\n",
     "notebook creation: aiwalter\n",
     "\n",
