[DOC] change imports in detection tutorial to `detection` module (#7306)
This PR changes imports in the detection tutorial to the `detection`
module, from `annotation`.

Requires https://github.com/sktime/sktime/pull/7294.

--- a/examples/07_detection_anomaly_changepoints.ipynb
+++ b/examples/07_detection_anomaly_changepoints.ipynb
@@ -222,7 +222,7 @@
     }
    ],
    "source": [
-    "from sktime.annotation.stray import STRAY\n",
+    "from sktime.detection.stray import STRAY\n",
     "\n",
     "model = STRAY()\n",
     "model.fit(df[\"data\"])\n",
@@ -853,7 +853,7 @@
     }
    ],
    "source": [
-    "from sktime.annotation.bs import BinarySegmentation\n",
+    "from sktime.detection.bs import BinarySegmentation\n",
     "\n",
     "model = BinarySegmentation(threshold=1000)\n",
     "predicted_change_points = model.fit_predict(df)\n",
