[DOC] Small typo on explanation of regression (#7366)
The description seemed copy-pasted from that of classification. Updated
a couple of words

--- a/examples/02_classification.ipynb
+++ b/examples/02_classification.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "- Example: Daily energy consumption profile over time - Predict season, e.g., winter/summer, or type of consumer\n",
     "\n",
-    "Regression = try to assign one *category* per time series, after training on time series/category examples\n",
+    "Regression = try to assign one continuous *numerical value* per time series, after training on time series/category examples\n",
     "\n",
     "- Example: Temperature/pressure/time profile of chemical reactor - Predict total purity (fraction of 1)\n",
     "\n",
