fix code-quality issues

--- a/examples/02_classification.ipynb
+++ b/examples/02_classification.ipynb
@@ -1461,7 +1461,7 @@
     "from sktime.datasets import load_arrow_head\n",
     "\n",
     "# step 1-- prepare a dataset (multivariate for demonstration)\n",
-    "X_train, y_train = load_arrow_head(split= \"train\")\n",
+    "X_train, y_train = load_arrow_head(split=\"train\")\n",
     "X_new, _ = load_arrow_head(split=\"test\")\n",
     "\n",
     "# step 2-- define the TimeSeriesForestClassifier\n",
@@ -1507,24 +1507,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sktime.dists_kernels.indep import IndepDist\n",
-    "from sktime.dists_kernels.dtw import DtwDist\n",
     "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
     "from sktime.datasets import load_arrow_head\n",
+    "from sktime.dists_kernels.dtw import DtwDist\n",
+    "from sktime.dists_kernels.indep import IndepDist\n",
     "\n",
     "# step 1-- prepare a dataset (multivariate for demonstrating purposes)\n",
-    "X_train, y_train = load_arrow_head(split='train', return_X_y=True)\n",
-    "X_new, _ = load_arrow_head(split='test', return_X_y=True)\n",
+    "X_train, y_train = load_arrow_head(split=\"train\", return_X_y=True)\n",
+    "X_new, _ = load_arrow_head(split=\"test\", return_X_y=True)\n",
     "\n",
     "# step 2-- define a classification estimator with distance parameter IndepDist\n",
-    "indep_dist_sum = IndepDist(dist=DtwDist(), aggfun='sum') \n",
-    "knn_sum = KNeighborsTimeSeriesClassifier(distance=indep_dist_sum) \n",
+    "indep_dist_sum = IndepDist(dist=DtwDist(), aggfun=\"sum\")\n",
+    "knn_sum = KNeighborsTimeSeriesClassifier(distance=indep_dist_sum)\n",
     "\n",
     "# step 3-- train the models with the data\n",
     "knn_sum.fit(X_train, y_train)\n",
     "\n",
     "# step 4-- predict labels on new data\n",
-    "y_pred = knn_sum.predict(X_new[:5]) # Smaller set for faster runtime.\n"
+    "y_pred = knn_sum.predict(X_new[:5])  # Smaller set for faster runtime."
    ]
   },
   {
@@ -1560,28 +1560,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "from sktime.datasets import load_arrow_head\n",
     "from sktime.dists_kernels.algebra import CombinedDistance\n",
     "from sktime.dists_kernels.dtw import DtwDist\n",
-    "from sktime.distances import euclidean_distance\n",
-    "from sktime.datasets import load_arrow_head\n",
-    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
     "\n",
     "# step 1-- load a dataset\n",
-    "X_train, y_train = load_arrow_head(split = \"train\", return_X_y=True)\n",
-    "X_new, _ = load_arrow_head(split='test', return_X_y=True)\n",
+    "X_train, y_train = load_arrow_head(split=\"train\", return_X_y=True)\n",
+    "X_new, _ = load_arrow_head(split=\"test\", return_X_y=True)\n",
     "\n",
-    "# step 2-- setup combined distance with unweighted and weighted DTW dist on separate components\n",
+    "# step 2-- setup combined distance\n",
     "combined_dist = CombinedDistance([DtwDist(), DtwDist(weighted=True)])\n",
     "\n",
     "## step 3-- initialize the classifier\n",
     "knn_combined_dist = KNeighborsTimeSeriesClassifier(distance=combined_dist)\n",
     "\n",
     "## step 4-- train the classifier\n",
-    "knn_combined_dist.fit(X_train,y_train)\n",
+    "knn_combined_dist.fit(X_train, y_train)\n",
     "\n",
     "## step 5-- obtain the predictions from the classifier.\n",
     "y_pred = knn_combined_dist.predict(X_new[:5])"
