--- a/examples/01c_forecasting_hierarchical_global.ipynb
+++ b/examples/01c_forecasting_hierarchical_global.ipynb
@@ -279,7 +279,7 @@
     "* instance index: the first element of pairs in `obj.index` is interpreted as an instance index. \n",
     "* variables: columns of `obj` correspond to different variables\n",
     "* variable names: column names `obj.columns`\n",
-    "* time points: rows of `obj` with the same `\"timepoints\"` index correspond correspond to the same time point; rows of `obj` with different `\"timepoints\"` index correspond correspond to the different time points.\n",
+    "* time points: rows of `obj` with the same `\"timepoints\"` index correspond to the same time point; rows of `obj` with different `\"timepoints\"` index correspond to the different time points.\n",
     "* time index: the second element of pairs in `obj.index` is interpreted as a time index. \n",
     "* capabilities: can represent panels of multivariate series; can represent unequally spaced series; can represent panels of unequally supported series; cannot represent panels of series with different sets of variables."
    ]
@@ -416,7 +416,7 @@
     "* hierarchy: the non-time-like indices in `obj.index` are interpreted as a hierarchy identifying index. \n",
     "* variables: columns of `obj` correspond to different variables\n",
     "* variable names: column names `obj.columns`\n",
-    "* time points: rows of `obj` with the same `\"timepoints\"` index correspond correspond to the same time point; rows of `obj` with different `\"timepoints\"` index correspond correspond to the different time points.\n",
+    "* time points: rows of `obj` with the same `\"timepoints\"` index correspond to the same time point; rows of `obj` with different `\"timepoints\"` index correspond to the different time points.\n",
     "* time index: the last element of tuples in `obj.index` is interpreted as a time index. \n",
     "* capabilities: can represent hierarchical series; can represent unequally spaced series; can represent unequally supported hierarchical series; cannot represent hierarchical series with different sets of variables."
    ]
