--- a/examples/07_detection_anomaly_changepoints.ipynb
+++ b/examples/07_detection_anomaly_changepoints.ipynb
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6fcf2dbd-0afb-4d11-b238-84294e811dba",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
     "    linestyle=\"--\",\n",
     ")\n",
     "\n",
-    "for i, cp in enumerate(predicted_change_points):\n",
+    "for i, cp in enumerate(predicted_change_points.values.flatten()):\n",
     "    label = \"Predicted Change Points\" if i == 0 else None\n",
     "    ax.axvline(cp, color=\"tab:green\", linestyle=\"--\", label=label)\n",
     "\n",
