--- a/examples/07_detection_anomaly_changepoints.ipynb
+++ b/examples/07_detection_anomaly_changepoints.ipynb
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9dbdfa3d-9fa3-4f5f-b9b5-a4a8d84fe12e",
    "metadata": {},
    "outputs": [
@@ -637,8 +637,8 @@
     }
    ],
    "source": [
-    "print(\"left: \", anomaly_intervals.iat[0].left)\n",
-    "print(\"right: \", anomaly_intervals.iat[0].right)"
+    "print(\"left: \", anomaly_intervals.ilocs[0].left)\n",
+    "print(\"right: \", anomaly_intervals.ilocs[0].right)"
    ]
   },
   {
