--- a/examples/07_detection_anomaly_changepoints.ipynb
+++ b/examples/07_detection_anomaly_changepoints.ipynb
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1409870e-bdb2-4fd1-870f-7feb9f9efd9c",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
     "ax.plot(df[\"data\"], label=\"Not Anomalous\")\n",
     "ax.plot(df.loc[df[\"label\"] == 1.0, \"data\"], label=\"Anomalous\")\n",
     "\n",
-    "for interval in anomaly_intervals:\n",
+    "for interval in anomaly_intervals.ilocs:\n",
     "    left = interval.left\n",
     "    right = interval.right\n",
     "    ax.axvspan(left, right, color=\"tab:green\", alpha=0.3, label=\"Predicted Anomalies\")\n",
