--- a/examples/07_detection_anomaly_changepoints.ipynb
+++ b/examples/07_detection_anomaly_changepoints.ipynb
@@ -576,9 +576,9 @@
     }
    ],
    "source": [
-    "from sktime.annotation.plotting.utils import plot_time_series_with_subsequent_outliers\n",
+    "from sktime.detection.plotting.utils import plot_time_series_with_subsequent_outliers\n",
     "\n",
-    "_ = plot_time_series_with_subsequent_outliers(df)"
+    "plot_time_series_with_subsequent_outliers(df)"
    ]
   },
   {
