--- a/examples/02_classification.ipynb
+++ b/examples/02_classification.ipynb
@@ -1431,13 +1431,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.5 Multivariate Time Series Classification - basic vignettes\n",
+    "### 2.2.5 Time Series Classification - handling multivariate data\n",
     "\n",
-    "In time series classification, handling multivariate data can be crucial when each variable or feature impacts classification. This section introduces three methods to deal with multivariate data.\n",
+    "Introducing three common methods to handle multivariate data:\n",
     "\n",
-    "1. Classifiers with Native Multivariate Data support: Some estimators natively support multivaridate data. An example \n",
-    "of this is `TimeSeriesForestClassifier`. This capability is also indicated by `capability: multivariate` tag. Refer [Section 2.3](#23-searching-for-estimators-estimator-tags) for more.\n",
-    "2. `IndepDist`: Aggregates univariate distances across multiple variables to calculate an overall distance for multivariate data. Mathematically, let $d(x_i​,y_i​)$ be a univariate distance function applied to a variable i. The aggregated multivariate distance $d_y(x,y)$ can be defined as $$d_g​(x,y)=g(d(x_1​,y_1​),d(x_2​,y_2​),…,d(x_D​,y_D​))$$ where g is an aggregation function (eg. sum, mean). This approach is beneficial when each variable provides unique information for classification. Refer this [link](https://www.sktime.net/en/latest/api_reference/auto_generated/sktime.dists_kernels.indep.IndepDist.html) for a detailed walkthrough.\n",
+    "**Classifiers with native multivariate capability**, e.g., `TimeSeriesForestClassifier`.\n",
+    "\n",
+    "Estimators with the `capability: multivariate` tag support multivariate `X` out of the box. Refer [Section 2.3](#23-searching-for-estimators-estimator-tags) for how to search for these.\n",
+    "\n",
+    "**Distance aggregation via `IndepDist` or `CombinedDistance`.** \n",
+    "\n",
+    "`IndepDist` aggregates univariate distances across multiple variables to an overall multivariate distance.\n",
     "\n",
     "3. `CombinedDistance`: This class enables combining multiple univariate distances or kernel transformers through an arithmetic operation (e.g addition, multiplication) on their respective distance matrices. Suppose we have N base distance matrices $dist_1$, $dist_2$, $dist_3$,..., $dist_4$ calculated from different distance transformers applied to a dataset. For an operation $f$ (eg. `np.sum` or `np.mean`) the `CombinedDistance` outputs a single matrix $dist$ where each entry is calculated as $$dist[i,j] = f(dist_1​[i,j],dist_2​[i,j],…,dist_N​[i,j])$$ This formula provides flexibility to test out various transformations. Refer this [link](https://www.sktime.net/en/latest/api_reference/auto_generated/sktime.dists_kernels.algebra.CombinedDistance.html) for a detailed walkthrough.\n",
     "\n",
