--- a/examples/02_classification.ipynb
+++ b/examples/02_classification.ipynb
@@ -1441,11 +1441,21 @@
     "\n",
     "**Distance aggregation via `IndepDist` or `CombinedDistance`.** \n",
     "\n",
-    "`IndepDist` aggregates univariate distances across multiple variables to an overall multivariate distance.\n",
+    "`IndepDist` aggregates univariate time series distances across multiple variables to an overall multivariate distance.\n",
     "\n",
-    "3. `CombinedDistance`: This class enables combining multiple univariate distances or kernel transformers through an arithmetic operation (e.g addition, multiplication) on their respective distance matrices. Suppose we have N base distance matrices $dist_1$, $dist_2$, $dist_3$,..., $dist_4$ calculated from different distance transformers applied to a dataset. For an operation $f$ (eg. `np.sum` or `np.mean`) the `CombinedDistance` outputs a single matrix $dist$ where each entry is calculated as $$dist[i,j] = f(dist_1​[i,j],dist_2​[i,j],…,dist_N​[i,j])$$ This formula provides flexibility to test out various transformations. Refer this [link](https://www.sktime.net/en/latest/api_reference/auto_generated/sktime.dists_kernels.algebra.CombinedDistance.html) for a detailed walkthrough.\n",
+    "Mathematically, `IndepDist` represents a multivariate distance $d_g(x,y)$ defined as\n",
     "\n",
-    "For further details on distance methods, refer to [Tutorial](https://www.sktime.net/en/latest/examples/06_distances_kernels_alignment.html)"
+    "$$d_g​(x,y)=g(d(x_1​,y_1​),d(x_2​,y_2​),…,d(x_D​,y_D​)),$$\n",
+    "\n",
+    "where $g$ is an chosen aggregation function such as sum, mean, or maximum.\n",
+    "\n",
+    "**Distance construction via `CombinedDistance`.**\n",
+    "\n",
+    "`CombinedDistance` gives more flexibility in choosing the function $g$ above, supporting arbitrary arithmetic operations.\n",
+    "\n",
+    "The class can also be invoked by convenience syntax using arithetic operations such as `dist1 + dist2`.\n",
+    "\n",
+    "For further details on customizing time series distances or kernels, refer to [Tutorial](https://www.sktime.net/en/latest/examples/06_distances_kernels_alignment.html)"
    ]
   },
   {
