Update example notebook

--- a/examples/01c_forecasting_hierarchical_global.ipynb
+++ b/examples/01c_forecasting_hierarchical_global.ipynb
@@ -3162,7 +3162,7 @@
    "source": [
     "#### Using ReconcilerForecaster\n",
     "\n",
-    "The `ReconcilerForecaster` wraps all reconciliation methods together with a forecaster, and, in the case of optimal reconciliation, computes the error covariance matrix."
+    "The `ReconcilerForecaster` wraps all reconciliation methods together with a forecaster, and, in the case of optimal reconciliation, computes the error covariance matrix. The `mint_shrink` is a optimal reconciliation method that shrinks the error covariance matrix to improve the estimate."
    ]
   },
   {
@@ -3326,13 +3326,6 @@
     "forecaster.fit(y_hier)\n",
     "forecaster.predict(fh=[1, 2])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
