--- a/examples/04_benchmarking_new_framework.ipynb
+++ b/examples/04_benchmarking_new_framework.ipynb
@@ -48,9 +48,7 @@
     "from sktime.forecasting.naive import NaiveForecaster\n",
     "from sktime.forecasting.reconcile import ReconcilerForecaster\n",
     "from sktime.forecasting.ttm import TinyTimeMixerForecaster\n",
-    "from sktime.performance_metrics.forecasting import (\n",
-    "    MeanAbsoluteError, MeanSquaredError\n",
-    ")\n",
+    "from sktime.performance_metrics.forecasting import MeanAbsoluteError, MeanSquaredError\n",
     "from sktime.split import SlidingWindowSplitter\n",
     "\n",
     "# hide warnings\n",
@@ -135,9 +133,12 @@
     "# TODO need to handle metrics with same name\n",
     "# TODO handle global forecasting\n",
     "# TODO Add other tasks (classification, anomaly detection, etc)\n",
-    "# TODO ResultObject to dataframe method. \n",
+    "# TODO ResultObject to dataframe method.\n",
     "\n",
-    "scorers = [MeanAbsoluteError(multilevel=\"raw_values\"), MeanSquaredError(multilevel=\"raw_values\", by_index=True)]\n",
+    "scorers = [\n",
+    "    MeanAbsoluteError(multilevel=\"raw_values\"),\n",
+    "    MeanSquaredError(multilevel=\"raw_values\", by_index=True),\n",
+    "]\n",
     "\n",
     "benchmark.add_task(\n",
     "    load_airline,\n",
@@ -151,7 +152,7 @@
     "for result in benchmark_result.results:\n",
     "    print(result.model_id)\n",
     "    print(result.means)\n",
-    "    print(\"---\")\n"
+    "    print(\"---\")"
    ]
   },
   {
@@ -278,9 +279,12 @@
     "# TODO need to handle metrics with same name\n",
     "# TODO handle global forecasting\n",
     "# TODO Add other tasks (classification, anomaly detection, etc)\n",
-    "# TODO ResultObject to dataframe method. \n",
+    "# TODO ResultObject to dataframe method.\n",
     "\n",
-    "scorers = [MeanAbsoluteError(multilevel=\"raw_values\"), MeanSquaredError(multilevel=\"raw_values\", by_index=True)]\n",
+    "scorers = [\n",
+    "    MeanAbsoluteError(multilevel=\"raw_values\"),\n",
+    "    MeanSquaredError(multilevel=\"raw_values\", by_index=True),\n",
+    "]\n",
     "\n",
     "# benchmark.add_task(\n",
     "#     load_airline(),\n",
@@ -301,7 +305,7 @@
     "for result in benchmark_result.results:\n",
     "    print(result.model_id)\n",
     "    print(result.means)\n",
-    "    print(\"---\")\n"
+    "    print(\"---\")"
    ]
   },
   {
@@ -373,7 +377,10 @@
     "    return y\n",
     "\n",
     "\n",
-    "scorers = [MeanAbsoluteError(multilevel=\"raw_values\"), MeanAbsoluteError(multilevel=\"raw_values\", by_index=True)]\n",
+    "scorers = [\n",
+    "    MeanAbsoluteError(multilevel=\"raw_values\"),\n",
+    "    MeanAbsoluteError(multilevel=\"raw_values\", by_index=True),\n",
+    "]\n",
     "\n",
     "splitter = SlidingWindowSplitter(fh=[1, 2, 3], window_length=4, step_length=2)\n",
     "\n",
