--- a/examples/transformation/fracdiff/example_prado.ipynb
+++ b/examples/transformation/fracdiff/example_prado.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examples"
+    "# Financial data examples"
    ]
   },
   {
@@ -810,13 +810,6 @@
     "plt.title(\"ADF statistics of fractionally differentiated prices\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
