--- a/examples/04_benchmarking_new_framework.ipynb
+++ b/examples/04_benchmarking_new_framework.ipynb
@@ -364,6 +364,7 @@
     "\n",
     "\n",
     "def get_data():\n",
+    "    \"\"\"Generate hierarchical data for testing\"\"\"\n",
     "    agg = Aggregator()\n",
     "\n",
     "    y = _bottom_hier_datagen(\n",
