Fix tests and adress review comments

--- a/examples/04_benchmarking_new_framework.ipynb
+++ b/examples/04_benchmarking_new_framework.ipynb
@@ -40,7 +40,7 @@
     "# import required functions and classes\n",
     "import warnings\n",
     "\n",
-    "from sktime.benchmarking.forecasting_new import (\n",
+    "from sktime.benchmarking.forecasting import (\n",
     "    ForecastingBenchmark as ForecastingBenchmarkNew,\n",
     ")\n",
     "from sktime.datasets import load_airline\n",
@@ -364,7 +364,7 @@
     "\n",
     "\n",
     "def get_data():\n",
-    "    \"\"\"Generate hierarchical data for testing\"\"\"\n",
+    "    \"\"\"Generate hierarchical data for testing.\"\"\"\n",
     "    agg = Aggregator()\n",
     "\n",
     "    y = _bottom_hier_datagen(\n",
