[ENH] translated french text to english

--- a/examples/01_forecasting.ipynb
+++ b/examples/01_forecasting.ipynb
@@ -34,7 +34,7 @@
     "**Section 4** gives an introduction to how to write custom estimators compliant with the `sktime` interface.\n",
     "\n",
     "Further references:\n",
-    "* For further details on how forecasting is different from supervised prediction à la `scikit-learn`, and pitfalls of misdiagnosing forecasting as supervised prediction, have a look at [this notebook](./01a_forecasting_sklearn.ipynb)\n",
+    "* For further details on how forecasting is different from supervised prediction as in `scikit-learn`, and pitfalls of misdiagnosing forecasting as supervised prediction, have a look at [this notebook](./01a_forecasting_sklearn.ipynb)\n",
     "* For a scientific reference, take a look at [our paper on forecasting with sktime](https://arxiv.org/abs/2005.08067) in which we discuss `sktime`'s forecasting module in more detail and use it to replicate and extend the M4 study."
    ]
   },
