--- a/examples/annotation/segmentation_with_clasp.ipynb
+++ b/examples/annotation/segmentation_with_clasp.ipynb
@@ -46,8 +46,8 @@
     "sns.set_theme()\n",
     "sns.set_color_codes()\n",
     "\n",
-    "from sktime.annotation.clasp import ClaSPSegmentation, find_dominant_window_sizes\n",
-    "from sktime.annotation.plotting.utils import (\n",
+    "from sktime.detection.clasp import ClaSPSegmentation, find_dominant_window_sizes\n",
+    "from sktime.detection.plotting.utils import (\n",
     "    plot_time_series_with_change_points,\n",
     "    plot_time_series_with_profiles,\n",
     ")\n",
