[MNT] 0.37.0 deprecations and change actions (#8148)
Carries out deprecations and change actions scheduled for 0.35.0:

* remove deprecated `annotation` module and `BaseAnnotator` - replaced
by `detection` module and `BaseDetector`
* remove deprecated `Y` argument in `BaseDetector` methods
* remove deprecated `HierarchyEnsembleForecaster.fitted_list` parameter
* bump deprecation/change checks scheduled for 0.37.0 to 0.38.0

--- a/examples/annotation/segmentation_with_clasp.ipynb
+++ b/examples/annotation/segmentation_with_clasp.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "religious-fields",
    "metadata": {},
    "outputs": [],
@@ -46,12 +46,12 @@
     "sns.set_theme()\n",
     "sns.set_color_codes()\n",
     "\n",
-    "from sktime.annotation.clasp import ClaSPSegmentation, find_dominant_window_sizes\n",
-    "from sktime.annotation.plotting.utils import (\n",
+    "from sktime.datasets import load_electric_devices_segmentation\n",
+    "from sktime.detection.clasp import ClaSPSegmentation, find_dominant_window_sizes\n",
+    "from sktime.detection.plotting.utils import (\n",
     "    plot_time_series_with_change_points,\n",
     "    plot_time_series_with_profiles,\n",
-    ")\n",
-    "from sktime.datasets import load_electric_devices_segmentation"
+    ")"
    ]
   },
   {
