--- a/examples/01c_forecasting_hierarchical_global.ipynb
+++ b/examples/01c_forecasting_hierarchical_global.ipynb
@@ -1761,7 +1761,7 @@
     "    * can be used for bottom-up reconciliation\n",
     "* transformer implementing reconciliation logic - `BottomUpReconciler()`, `TopdownReconciler(\"td_fcst\")`, `TopdownReconciler(\"td_share\")`, `OptimalReconciler(\"ols\")`\n",
     "    * these transformations are meant to be used in a pipeline, by preprocessing the data before fitting a forecaster and postprocessing the forecasts\n",
-    "* `ReconcileForecasts` - a convenience class that is meant to reconcile forecasts, without a pipeline, when possible. \n"
+    "* `Reconcile` - the previous version of reconciliation in sktime, that is meant to reconcile forecasts, without a pipeline, when possible.\n"
    ]
   },
   {
