Fix typos again

--- a/examples/01c_forecasting_hierarchical_global.ipynb
+++ b/examples/01c_forecasting_hierarchical_global.ipynb
@@ -4782,7 +4782,7 @@
    "source": [
     "You can see that `y_train` and `y_test` are different on hierarchical level `h0` which indicates that they come from different instances.\n",
     "\n",
-    "We can initialize a gloabl forecaster to fit on `y_train` and predict on `y_test`."
+    "We can initialize a global forecaster to fit on `y_train` and predict on `y_test`."
    ]
   },
   {
