--- a/examples/02_classification.ipynb
+++ b/examples/02_classification.ipynb
@@ -1453,7 +1453,7 @@
     "\n",
     "`CombinedDistance` gives more flexibility in choosing the function $g$ above, supporting arbitrary arithmetic operations.\n",
     "\n",
-    "The class can also be invoked by convenience syntax using arithetic operations such as `dist1 + dist2`.\n",
+    "The class can also be invoked by convenience syntax using arithmetic operations such as `dist1 + dist2`.\n",
     "\n",
     "For further details on customizing time series distances or kernels, refer to [Tutorial](https://www.sktime.net/en/latest/examples/06_distances_kernels_alignment.html)"
    ]
@@ -2017,7 +2017,7 @@
        "      <td>visual_block_kind</td>\n",
        "      <td>estimator</td>\n",
        "      <td>(str, [single, serial, parallel])</td>\n",
-       "      <td>how to display html represantation of a meta-e...</td>\n",
+       "      <td>how to display html representation of a meta-e...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
@@ -2037,7 +2037,7 @@
        "2         capability:contractable                                          estimator                                               bool  contract time setting, does the estimator supp...\n",
        "3   capability:feature_importance                                          estimator                                               bool      Can the estimator provide feature importance?\n",
        "4       capability:missing_values                                             object                                               bool  can the estimator handle missing data (NA, np....\n",
-       "5          capability:multioutput                            [classifier, regressor]                                               bool  can the estimator handle multi-output time ser...\n",
+       "5          capability:multioutput                            [classifier, regressor]                                               bool  can the estimator handle multi-output time set...\n",
        "6       capability:multithreading                     [classifier, early_classifier]                                               bool  can the classifier set n_jobs to use multiple ...\n",
        "7         capability:multivariate  [classifier, clusterer, early_classifier, para...                                               bool  can the estimator be applied to time series wi...\n",
        "8        capability:predict_proba                            [classifier, clusterer]                                               bool  does the estimator implement a non-default pre...\n",
@@ -2057,7 +2057,7 @@
        "22                requires_cython                                             object                                               bool  whether the object requires a C compiler prese...\n",
        "23                reserved_params                                          estimator                                        (list, str)  parameters reserved by the base class and pres...\n",
        "24                 sktime_version                                             object                                                str  sktime version from which this estimator class...\n",
-       "25              visual_block_kind                                          estimator                  (str, [single, serial, parallel])  how to display html represantation of a meta-e...\n",
+       "25              visual_block_kind                                          estimator                  (str, [single, serial, parallel])  how to display html representation of a meta-e...\n",
        "26                  y_inner_mtype                                          estimator                                        (list, str)  which machine type(s) is the internal _fit/_pr..."
       ]
      },
