--- a/examples/03b_forecasting_transformers_pipelines_tuning.ipynb
+++ b/examples/03b_forecasting_transformers_pipelines_tuning.ipynb
@@ -215,7 +215,7 @@
    "source": [
     "## 2. Simple Forecasting Pipelines\n",
     "\n",
-    "We hae seen: pipelines combine multiple estimators into one.\n",
+    "We have seen: pipelines combine multiple estimators into one.\n",
     "\n",
     "Forecasters methods have two key data arguments, both time series:\n",
     "\n",
