--- a/examples/06_distances_kernels_alignment.ipynb
+++ b/examples/06_distances_kernels_alignment.ipynb
@@ -1060,8 +1060,8 @@
     "aligner methods:\n",
     "\n",
     "* `fit` - computes alignment\n",
-    "* `get_alignment` - returns reparametrized indices, also called \"alignment path\"\n",
-    "* `get_aligned` returns reparametrized series\n",
+    "* `get_alignment` - returns reparameterized indices, also called \"alignment path\"\n",
+    "* `get_aligned` returns reparameterized series\n",
     "* `get_distance` returns distance between the two aligned series - only available if `\"capability:get_distance\"`"
    ]
   },
