--- a/examples/07_detection_anomaly_changepoints.ipynb
+++ b/examples/07_detection_anomaly_changepoints.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "**Change Point Detection**\n",
     "\n",
-    "1. Detecting detecting signifant changes in how your data is generated.\n",
+    "1. Detecting detecting significant changes in how your data is generated.\n",
     "\n",
     "**Segmentation**\n",
     "\n",
@@ -48,7 +48,7 @@
     "## Types of Outliers\n",
     "\n",
     "1. Point outliers: Individual data point that are unusual compared to the whole timeseries (global) or neighbouring points (local).\n",
-    "1. Subsequence outliers: Sequence of inidividual points that are unusual when compared to others.\n",
+    "1. Subsequence outliers: Sequence of individual points that are unusual when compared to others.\n",
     "1. Finding anomalous timeseries."
    ]
   },
