--- a/examples/transformation/catch22.ipynb
+++ b/examples/transformation/catch22.ipynb
@@ -625,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also set specific column names, e.g., `\"short_str_feat\"` which will show short name of the feauture in the column name.\n",
+    "We can also set specific column names, e.g., `\"short_str_feat\"` which will show short name of the feature in the column name.\n",
     "\n",
     "If the location and spread of the raw time-series distribution may be important, set `catch24 = true` to include additionally `Mean` and `StandardDeviation` values."
    ]
