--- a/examples/transformation/signature_method.ipynb
+++ b/examples/transformation/signature_method.ipynb
@@ -272,7 +272,7 @@
     "As previously mentioned, in [1] the authors performed a large hyperparameter search over the signature variations on the full UEA archive to develop a 'Best Practices' approach to building a model. This required some fine tuning over the following parameters, as they were found to be very dataset specific: \n",
     "- `depth` over [1, 2, 3, 4, 5, 6]\n",
     "- `window_depth` over [2, 3, 4]\n",
-    "- `RandomForestClassifier` hyperparamters.\n",
+    "- `RandomForestClassifier` hyperparameters.\n",
     "\n",
     "Here we show how this is easily done using the sktime framework. "
    ]
