Revert false positives

--- a/examples/02_classification.ipynb
+++ b/examples/02_classification.ipynb
@@ -2037,7 +2037,7 @@
        "2         capability:contractable                                          estimator                                               bool  contract time setting, does the estimator supp...\n",
        "3   capability:feature_importance                                          estimator                                               bool      Can the estimator provide feature importance?\n",
        "4       capability:missing_values                                             object                                               bool  can the estimator handle missing data (NA, np....\n",
-       "5          capability:multioutput                            [classifier, regressor]                                               bool  can the estimator handle multi-output time set...\n",
+       "5          capability:multioutput                            [classifier, regressor]                                               bool  can the estimator handle multi-output time ser...\n",
        "6       capability:multithreading                     [classifier, early_classifier]                                               bool  can the classifier set n_jobs to use multiple ...\n",
        "7         capability:multivariate  [classifier, clusterer, early_classifier, para...                                               bool  can the estimator be applied to time series wi...\n",
        "8        capability:predict_proba                            [classifier, clusterer]                                               bool  does the estimator implement a non-default pre...\n",
